# django-post-fetch-hook

./: 404.html  CONTRIBUTING.md  Makefile  index.html  justfile  manage.py  mkdocs.yml  pyproject.toml  search.html
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
css/: docs.css
docs/: usage.md
example_project/myapp/: apps.py  models.py
example_project/myapp/migrations/: 0001_initial.py
example_project/project/: settings.py
post_fetch_hook/: mixins.py  models.py  typing.py
search/: search_index.json
tests/: conftest.py  test_models.py
tests/django/: settings.py  testdb
tests/myapp/: models.py
tests/myapp/migrations/: 0001_initial.py
tests/project/: settings.py
usage/: index.html
